# grun

./: .gitignore  CMakeLists.txt  README.md  _gscript  build  release.md  run
.github/workflows/: release.yml
code/: CMakeLists.txt
code/include/: App.h  GradleParams.h  gb.h  glib.h
code/include/gb/: ReplaceableVars.h  ShutdownMonitor.h  console.h  files.h  process.h  strings.h
code/include/glib/: process.h  strings.h
code/src/: App.cpp  GradleParams.cpp  main.cpp
code/src/gb/: ReplaceableVars.cpp  ShutdownMonitor.cpp  console.cpp  files.cpp  process.cpp  strings.cpp
code/src/glib/: ReplaceableVars.cpp  console.cpp  files.cpp  process.cpp
include/: App.h  GradleParams.h  glib.h
include/glib/: ReplaceableVars.h  ReplaceableVars.inl  ShutdownMonitor.h  SysCommand.h  collections.h  console.h  files.h  gstrings.h  process.h  strings.h  strings.inl  types.h
src/: App.cpp  GradleParams.cpp  main.cpp
src/glib/: ReplaceableVars.cpp  ShutdownMonitor.cpp  SysCommand.cpp  collections.cpp  console.cpp  files.cpp  gcollections.cpp  gstrings.cpp  process.cpp  strings.cpp
